Fixed bug: Some popups had overflowing form fields

--- a/static/themes/bootstrap/style.css
+++ b/static/themes/bootstrap/style.css
@@ -574,6 +574,7 @@ label.ui-corner-all span {
 /* Responsive styling */
 .ui-multiselect-menu.ui-widget.ui-widget-content.ui-corner-all {
     width: 15% !important;
+    min-width: 200px;
 }
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
